--- a/views/components/menu.ejs
+++ b/views/components/menu.ejs
@@ -10,17 +10,15 @@
 		<a href="/" class="pure-menu-heading">BLOG-DOC</a>
 
 		<ul class="pure-menu-list">
-			<li class="pure-menu-item"><a href="/atHome" class="pure-menu-link">Template</a></li>
-
 			<li class="pure-menu-item"><a href="/archive" class="pure-menu-link">Archive</a></li>
 
 			<li class="pure-menu-item"><a href="/tags" class="pure-menu-link">Tags</a></li>
 
 			<li class="pure-menu-item">
-				<a href="/test" class="pure-menu-link">Test Page</a>
+				<a href="/test" class="pure-menu-link">Install</a>
 			</li>
 
-			<li class="pure-menu-item"><a href="#contact" class="pure-menu-link">Contact</a></li>
+			<li class="pure-menu-item"><a href="/license" class="pure-menu-link">License</a></li>
 		</ul>
 	</div>
 </div>
