Install Blog-Doc page

--- a/views/components/menu.ejs
+++ b/views/components/menu.ejs
@@ -15,7 +15,7 @@
 			<li class="pure-menu-item"><a href="/tags" class="pure-menu-link">Tags</a></li>
 
 			<li class="pure-menu-item">
-				<a href="/test" class="pure-menu-link">Install</a>
+				<a href="/install-blog-doc" class="pure-menu-link">Install</a>
 			</li>
 
 			<li class="pure-menu-item"><a href="/license" class="pure-menu-link">License</a></li>
