Load Pure.css from CDN

--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -4,18 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			content="<%= titles.docDescription %>"
-		/>
+		<meta name="description" content="<%= titles.docDescription %>" />
 		<title>Blog-Doc | <%= titles.docTitle %></title>
 		<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
 
-		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.min.css" /> -->
-		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/grids-responsive-min.css" /> -->
-		<link rel="stylesheet" href="/css/pure-min.min.css" />
-		<link rel="stylesheet" href="/css/grids-responsive-min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+			integrity="sha256-AXV9/14XTNljCQp7u3n02VIiYAICq8ocXkc11rvMlSw="
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="/css/styles.min.css" />
-		<link rel="stylesheet" href="/css/code-theme.min.css">
+		<link rel="stylesheet" href="/css/code-theme.min.css" />
 	</head>
-	<body>
+	<body></body>
+</html>
