Replace stylesheets by Pure.css CDN

--- a/views/templates/license.ejs
+++ b/views/templates/license.ejs
@@ -8,8 +8,12 @@
 		<title>Blog-Doc | License</title>
 		<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
 
-		<link rel="stylesheet" href="/css/pure-min.min.css" />
-		<link rel="stylesheet" href="/css/grids-responsive-min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+			integrity="sha256-AXV9/14XTNljCQp7u3n02VIiYAICq8ocXkc11rvMlSw="
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="/css/styles.min.css" />
 	</head>
 	<body>
