Remove extra tags

--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -17,5 +17,4 @@
 		<link rel="stylesheet" href="/css/styles.min.css" />
 		<link rel="stylesheet" href="/css/code-theme.min.css" />
 	</head>
-	<body></body>
-</html>
+	<body>
