--- a/views/templates/license.ejs
+++ b/views/templates/license.ejs
@@ -6,6 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="This is an EJS template" />
 		<title>Blog-Doc | License</title>
+		<% if (locals.build) { %>
+		<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+			integrity="sha256-AXV9/14XTNljCQp7u3n02VIiYAICq8ocXkc11rvMlSw="
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="css/styles.min.css" />
+		<% } else { %>
 		<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
 
 		<link
@@ -15,6 +25,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/styles.min.css" />
+		<% } %>
 	</head>
 	<body>
 		<div id="layout">
