Add posts pagination

--- a/views/layouts/postsTemplate.ejs
+++ b/views/layouts/postsTemplate.ejs
@@ -70,6 +70,7 @@
 				<% }) %> <% } %>
 			</p>
 			<div><%- postContent %></div>
+			<%- include('../components/postsPagination') %>
 		</div>
 	</div>
 </div>
