Make documentation on one page and update README

--- a/views/components/menu.ejs
+++ b/views/components/menu.ejs
@@ -24,16 +24,12 @@
 
 			<li class="pure-menu-item">
 				<a <% if (locals.build || locals.dynamic) { %>
-					href="/install-blog-doc.html" <% } else { %> href="/install-blog-doc" <% } %>
-					class="pure-menu-link">Install
+					href="/doc.html" <% } else { %> href="/doc" <% } %> class="pure-menu-link">Documentation
 				</a>
 			</li>
 
 			<li class="pure-menu-item">
-				<a <% if (locals.build || locals.dynamic) { %>
-					href="/go-static.html" <% } else { %> href="/go-static" <% } %>
-					class="pure-menu-link">Go Static !
-				</a>
+				<a href="https://github.com/LebCit/blog-doc" class="pure-menu-link">GitHub Repo</a>
 			</li>
 
 			<li class="pure-menu-item">
