Update comments for include pagination

--- a/views/layouts/index.html
+++ b/views/layouts/index.html
@@ -70,9 +70,9 @@
 
 <!--Start Pagination-->
 <% if (it.paginated) { %>
-<!--Pagination-->
+<!--Start include Pagination-->
 <%~ include('../components/pagination.html', it) %>
-<!--Note-->
+<!--End include Pagination-->
 <p class="archive-link">
 	All the posts can be found in the
 	<a href="/posts">archive</a>
