--- a/views/components/admin/menu.html
+++ b/views/components/admin/menu.html
@@ -38,7 +38,7 @@
 					data-bs-toggle="dropdown"
 					aria-label="Open user menu"
 				>
-					<span class="avatar avatar-sm" style="background-image: url(/icons/favicon.ico)"></span>
+					<span class="avatar avatar-sm" style="background-image: url(/static/icons/favicon.ico)"></span>
 				</a>
 				<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
 					<a href="/" class="dropdown-item">Home</a>
