Remove ability to change file title upon update

--- a/views/layouts/admin/adminUpdate.html
+++ b/views/layouts/admin/adminUpdate.html
@@ -27,7 +27,7 @@
 										<!-- PAGE FRONT MATTER -->
 										*/%>
 										<div id="page-front-matter" class="col-lg-6">
-											<div>
+											<div class="d-none">
 												<label for="page-title-input" class="form-label">
 													<b>Page title* - REQUIRED !</b>
 												</label>
@@ -101,7 +101,7 @@
 										<!-- POST FRONT MATTER -->
 										*/%>
 										<div id="post-front-matter" class="col-lg-6">
-											<div>
+											<div class="d-none">
 												<label for="post-title-input" class="form-label">
 													<b>Post title* - REQUIRED !</b>
 												</label>
