Move administration to a separate folder

--- a/views/admin/components/footer.html
+++ b/views/admin/components/footer.html
@@ -3,12 +3,16 @@
 		<div class="row text-center align-items-center flex-row-reverse">
 			<div class="col-lg-auto ms-lg-auto">
 				<ul class="list-inline list-inline-dots mb-0">
-					<li class="list-inline-item"><a href="/pages/doc" class="link-secondary">Documentation</a></li>
-
-					<li class="list-inline-item"><a href="/pages/license" class="link-secondary">License</a></li>
+					<li class="list-inline-item">
+						<a href="https://blogdoc.github.io/" class="link-secondary">Demo</a>
+					</li>
 
 					<li class="list-inline-item">
-						<a href="https://github.com/LebCit/blog-doc-space" class="link-secondary">Source code</a>
+						<a href="/pages/documentation" class="link-secondary">Documentation</a>
+					</li>
+
+					<li class="list-inline-item">
+						<a href="https://github.com/LebCit/blog-doc" class="link-secondary">Source code</a>
 					</li>
 
 					<li class="list-inline-item">
