--- a/views/admin/layouts/adminConfigSite.html
+++ b/views/admin/layouts/adminConfigSite.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<%~ include('../../components/admin/head.html', it) %>
+	<%~ include('../components/head.html', it) %>
 	<body class="theme-light">
 		<div class="page">
-			<%~ include('../../components/admin/menu.html', it) %>
+			<%~ include('../components/menu.html', it) %>
 
 			<div class="page-wrapper">
-				<%~ include('../../components/admin/page-header.html', it) %>
+				<%~ include('../components/page-header.html', it) %>
 				<div class="page-body">
 					<form id="site-config-form" action="/admin-config-site" method="post">
 						<div class="container-xl">
@@ -51,6 +51,11 @@
 										<div class="col-12">
 											<%~ include('./adminConfig/searchIdsFeatures.html', it) %>
 										</div>
+
+										<%/* Current Theme */%>
+										<div class="col-12">
+											<%~ include('./adminConfig/theme.html', it) %>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -65,9 +70,9 @@
 						</div>
 					</form>
 				</div>
-				<%~ include('../../components/admin/footer.html') %>
+				<%~ include('../components/footer.html') %>
 			</div>
 		</div>
-		<%~ include('../../components/admin/adminScripts.html', it) %>
+		<%~ include('../components/adminScripts.html', it) %>
 	</body>
 </html>
