--- a/views/admin/layouts/adminTable.html
+++ b/views/admin/layouts/adminTable.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<%~ include('../../components/admin/head.html', it) %>
+	<%~ include('../components/head.html', it) %>
 	<body class="theme-light">
 		<div class="page">
-			<%~ include('../../components/admin/menu.html', it) %>
+			<%~ include('../components/menu.html', it) %>
 
 			<div class="page-wrapper">
-				<%~ include('../../components/admin/page-header.html', it) %>
+				<%~ include('../components/page-header.html', it) %>
 				<div class="page-body">
 					<div class="container-xl">
 						<div class="row">
@@ -24,9 +24,9 @@
 						</div>
 					</div>
 				</div>
-				<%~ include('../../components/admin/footer.html') %>
+				<%~ include('../components/footer.html') %>
 			</div>
 		</div>
-		<%~ include('../../components/admin/adminScripts.html', it) %>
+		<%~ include('../components/adminScripts.html', it) %>
 	</body>
 </html>
