Load and initialize highlight.js module in themes

--- a/views/themes/default/components/footer.html
+++ b/views/themes/default/components/footer.html
@@ -11,7 +11,11 @@
 <% } %> <%/*
 <!-- Comment added for readability -->
 */%> <% if (it.mdRoute) { %>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+<script type="module">
+	import hljs from "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/es/highlight.min.js"
+
+	hljs.highlightAll()
+</script>
 <% } %>
 
 <script src="/static/scripts/main.js"></script>
