--- a/views/themes/clean-blog/components/footer.html
+++ b/views/themes/clean-blog/components/footer.html
@@ -43,5 +43,9 @@
 <% } %> <%/*
 <!-- Comment added for readability -->
 */%> <% if (it.mdRoute) { %>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+<script type="module">
+	import hljs from "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/es/highlight.min.js"
+
+	hljs.highlightAll()
+</script>
 <% } %>
