Add favicon setting to themes' heads

--- a/views/themes/clean-blog/components/head.html
+++ b/views/themes/clean-blog/components/head.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 	<title><%= it.siteTitle %> | <%= it.data.title %></title>
-	<link rel="shortcut icon" href="/static/icons/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="<%= it.data.favicon %>" type="image/x-icon" />
 	<%/* Font Awesome icons (free version) */%>
 	<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 	<%/* Google fonts */%>
