--- a/views/themes/default/components/head.html
+++ b/views/themes/default/components/head.html
@@ -5,8 +5,7 @@
 	<meta name="description" content="<%= it.data.description %>" />
 
 	<% /* Favicon */ %>
-	<link rel="shortcut icon" href="/static/icons/favicon.ico" type="image/x-icon" />
-
+	<link rel="shortcut icon" href="<%= it.data.favicon %>" type="image/x-icon" />
 	<% /* Title */ %>
 	<title><%= it.siteTitle %> | <%= it.data.title %></title>
 
